fixed text wrapping issue on add filters button in filter component

--- a/src/applications/mhv-secure-messaging/sass/search.scss
+++ b/src/applications/mhv-secure-messaging/sass/search.scss
@@ -57,7 +57,7 @@
 
   @media (min-width: $small-screen) {
     #additional-filter-accordion::part(accordion-header) {
-      width: 150px;
+      width: 160px;
     }
   }
 
